--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
 <script src="./p5.play.js"></script>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyB4xoGv6dy_DFXAj7Yt1CXLW3WnmWYViIE",
+    authDomain: "asynchronous-87708.firebaseapp.com",
+    databaseURL: "https://asynchronous-87708.firebaseio.com",
+    projectId: "asynchronous-87708",
+    storageBucket: "asynchronous-87708.appspot.com",
+    messagingSenderId: "426619998380",
+    appId: "1:426619998380:web:2ed35adb5d07bd31bacf09"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
